--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
+    "axios": "^1.7.2",
     "flowbite": "^2.4.1",
     "vue": "^3.4.29",
     "vue-i18n": "^9.13.1",
