--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Create .zip of dist directory 
       run: zip -r dist.zip dist #comprimimos la carpeta dist en un archivo zip
 
-    - name: Get total number of releases
+    - name: Get total number of releases #con este paso obtenemos el total releases y le sumamos +1 para que los tag se diferencien haciendo alusión a versiones
       id: get_release_count
       uses: actions/github-script@v6
       with:
@@ -42,9 +42,9 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Get current version
+    - name: Get current version #creamos una variable de entorno que haga referencia a este repo y guardamos el nombre
       id: current_version
-      run: echo "TAG=build_$(date +'%Y_%m_%d')_${{ steps.get_release_count.outputs.totalReleases }}" >> $GITHUB_ENV
+      run: echo "TAG=build_date$(date +'%Y_%m_%d')_v${{ steps.get_release_count.outputs.totalReleases }}" >> $GITHUB_ENV
 
     - name: Create tag #creamos el tag con el nombre dado en el paso anterio
       run: |
@@ -53,7 +53,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Upload dist.zip to GitHub Releases
+    - name: Upload dist.zip to GitHub Releases #`dist.zip` es el archivo que queremos subir
       uses: softprops/action-gh-release@v1
       with:
         files: dist.zip
