--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "build:prod": "vite build --mode production",
+    "build:dev": "vite build --mode development",
     "test": "jest"
   },
   "dependencies": {
