--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -44,7 +44,7 @@ jobs:
 
     - name: Get current version
       id: current_version
-      run: echo "TAG=Build_$(date +'%Y-%m-%d')_V${{ steps.get_release_count.outputs.totalReleases }}" >> $GITHUB_ENV
+      run: echo "TAG=build_dev_$(date +'%Y-%m-%d')_v${{ steps.get_release_count.outputs.totalReleases }}" >> $GITHUB_ENV
 
     - name: Create tag
       run: |
